Camera enable&disable

--- a/res/layout/test_foto_simple.xml
+++ b/res/layout/test_foto_simple.xml
@@ -11,8 +11,14 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:text="Take the selfie!" />
+
+    <ToggleButton
+        android:id="@+id/toggleButton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="ToggleButton" />
 
     <ImageView
         android:id="@+id/imageView1"
