--- a/res/menu/selfie_context_menu.xml
+++ b/res/menu/selfie_context_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
-        android:id="@+id/context_menu_help_guide"
-        android:title="@string/help_guide"/>
+        android:id="@+id/context_menu_details"
+        android:title="@string/details"/>
     <item
         android:id="@+id/context_menu_take_selfie"
         android:title="@string/take_selfie"/>
