--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="selfie_width">100dp</dimen>
     <dimen name="selfie_height">200dp</dimen>
+    <dimen name="thumbnail_selfie_width">60dp</dimen>
+    <dimen name="thumbnail_selfie_height">80dp</dimen>
     
 </resources>
